Add delete xml api

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lodash": "^4.17.19",
     "log4js": "^4.3.2",
     "net": "^1.0.2",
-    "prom-client": "^11.5.3"
+    "prom-client": "^11.5.3",
+    "xml": "^1.0.1"
   },
   "devDependencies": {
     "@babel/preset-es2016": "^7.0.0-beta.53",
