--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "forever-monitor": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.19",
     "log4js": "^4.3.2",
     "net": "^1.0.2",
+    "pg": "^8.5.1",
     "prom-client": "^11.5.3",
     "xml": "^1.0.1"
   },
